--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(szivArrayExample)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(szivArrayExample main.cpp)
+add_executable(szivArrayExample main.cpp cheaterArray.cpp cheaterArray.h)
